syntax = "proto3";

import "camera.proto";

package minieye.seg;

// input (subscribe)
message ParkSlotSegReq {
	minieye.CameraFrame camera_frame = 1;                      // 图像信息
}

// ---------------------------------------------------------------------
message ScaleWindow {
	float scale_x = 1;                                         // x - 缩放系数
	float scale_y = 2;                                         // y - 缩放系数
	float offset_x = 3;                                        // x - 偏移量
	float offset_y = 4;                                        // y - 偏移量
	int32 width = 5;                                           // 宽度
	int32 height = 6;                                          // 高度
} 

message SegMask {
	uint64 mask = 1;                                           // mask 地址(物理地址)
	ScaleWindow seg_info = 2;                                  // roi 
	bytes seg_supplement = 3;                                  // 分割结果补充信息 
	string label = 4;                                          // "parkslot", "freespace", "obstacle"
	uint64 offset = 5;                                         // 偏移量
	int32 data_type = 6;                                         // 数据属性: CV_8UC1, 
}

// topic : "parkslot_mask_meta"
// topic of mask in shm : "parkslot_mask"
// output (publish)
message ParkSpotSegResMeta { 
	repeated SegMask seg_mask = 1;                             // 其他结果 
	ParkSlotSegReq seg_context = 2;                                // seg输入的上下文信息
	uint64 start_time = 3;                                     // 任务开始时间(ms)
	uint64 finish_time = 4;                                    // 任务结束时间(ms)
	uint64 shm_index = 5;                                      // 数组下标 
}
